image url's changed.
js and css links changed in html and image for card back changed in html.

--- a/card_game.html
+++ b/card_game.html
@@ -8,7 +8,7 @@
   
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="newcardgame.css">
+  <link rel="stylesheet" href="card_game.css">
   
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">  
 </head>
@@ -17,7 +17,7 @@
 <div class="card-container">
   <div class="flip-card" id="card">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
        <div id="random_card_return"></div>
@@ -25,7 +25,7 @@
    </div>
    <div class="flip-card" id="card1">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -33,7 +33,7 @@
    </div>
    <div class="flip-card" id="card2">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -41,7 +41,7 @@
    </div>
    <div class="flip-card" id="card3">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -49,7 +49,7 @@
    </div>
    <div class="flip-card" id="card4">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -57,7 +57,7 @@
    </div>
    <div class="flip-card" id="card5">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -65,7 +65,7 @@
    </div>
    <div class="flip-card" id="card6">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -73,7 +73,7 @@
    </div>
    <div class="flip-card" id="card7">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -81,7 +81,7 @@
    </div>
    <div class="flip-card" id="card8">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -89,7 +89,7 @@
    </div>
    <div class="flip-card" id="card9">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -97,7 +97,7 @@
    </div>
    <div class="flip-card" id="card10">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -105,7 +105,7 @@
    </div>
    <div class="flip-card" id="card11">
      <div class="front">
-        <img src='playing_cardsn/b2fv.png' width='154px' height='231px';>
+        <img src='http://s20.postimg.org/w3afa6l09/b2fv.png' width='154px' height='231px';>
      </div>   
      <div class="back">
         <div id="random_card_return"></div>
@@ -118,7 +118,7 @@
 
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
-  <script src="newcardgame.js"></script>
+  <script src="card_game.js"></script>
   
 </body>
 </html>
